<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">K密罐</string>
    <string name="create">生成</string>
    <string name="copy">复制</string>
    <string name="memory_password">记忆密码</string>
    <string name="input_your_password">输入你的记忆密码</string>
    <string name="diff_code">区分代号</string>
    <string name="input_your_code">输入你的区分代号</string>
    <string name="password_create_area">密码生成区</string>
    <string name="introduction_password">记忆密码:能让你容易记住的密码，用于生成复杂密码</string>
    <string name="introduction_code">区分代号:使用不同的代号来区别不同用处的密码，如"QQ","淘宝","Taobao","Github"等</string>
    <string name="copy_ok">复制成功！酷爱拿去用吧！"</string>
    <string name="cant_create">缺少记忆密码或区分代号，无法生成</string>
    <string name="cant_copy">什么都没有生成啊</string>
    <string name="about">关于</string>
    <string name="about_message">一款基于HmacSHA256的密码管理\n作者:KosWu</string>
    <string name="goto_webpage_version">访问网页版</string>
    <string name="goto_project_page">访问项目地址</string>
    <string name="ok">确认</string>

</resources>
